@@ -1,0 +1,19 @@
+<?xml version="1.0" ?>
+<gconfschemafile>
+	<schemalist>
+		<schema>
+			<key>/schemas/apps/revelation-applet/prefs/file</key>
+			<owner>revelation-applet</owner>
+			<type>string</type>
+			<default></default>
+
+			<locale name="C">
+				<short>File to use</short>
+				<long>
+					The path to the password database file which
+					is used by the applet.
+				</long>
+			</locale>
+		</schema>
+	</schemalist>
+</gconfschemafile>
